Upgrade mockito